Add command which toggle status of the tiles

--- a/UAlbertaBot/VisualStudio/AKBot.vcxproj.filters
+++ b/UAlbertaBot/VisualStudio/AKBot.vcxproj.filters
@@ -190,6 +190,9 @@
     <ClCompile Include="..\Source\commands\WorkerCommandExecutor.cpp">
       <Filter>commands</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\commands\BaseLocationCommandExecutor.cpp">
+      <Filter>commands</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="common">
@@ -449,6 +452,9 @@
       <Filter>commands</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\commands\WorkerCommandExecutor.h">
+      <Filter>commands</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\commands\BaseLocationCommandExecutor.h">
       <Filter>commands</Filter>
     </ClInclude>
   </ItemGroup>
