Add command to set strategy - Add command executor for strategy - Split all strategy specific logic to separate classes

--- a/UAlbertaBot/VisualStudio/AKBot.vcxproj
+++ b/UAlbertaBot/VisualStudio/AKBot.vcxproj
@@ -43,6 +43,7 @@
     <ClCompile Include="..\Source\commands\BWAPICommandExecutor.cpp" />
     <ClCompile Include="..\Source\commands\CommandManager.cpp" />
     <ClCompile Include="..\Source\commands\ProductionCommandExecutor.cpp" />
+    <ClCompile Include="..\Source\commands\StrategyManagerCommandExecutor.cpp" />
     <ClCompile Include="..\Source\commands\UnitCommandExecutor.cpp" />
     <ClCompile Include="..\Source\commands\WorkerCommandExecutor.cpp" />
     <ClCompile Include="..\Source\Common.cpp" />
@@ -62,6 +63,18 @@
     <ClCompile Include="..\Source\DistanceMap.cpp" />
     <ClCompile Include="..\Source\GameCommander.cpp" />
     <ClCompile Include="..\Source\ScreenCanvas.cpp" />
+    <ClCompile Include="..\Source\strategies\protoss\DarkTemplarRush.cpp" />
+    <ClCompile Include="..\Source\strategies\protoss\DragoonRush.cpp" />
+    <ClCompile Include="..\Source\strategies\protoss\ZealotDrop.cpp" />
+    <ClCompile Include="..\Source\strategies\protoss\ZealotRush.cpp" />
+    <ClCompile Include="..\Source\strategies\terrain\FourBarracksMarine.cpp" />
+    <ClCompile Include="..\Source\strategies\terrain\MarineRush.cpp" />
+    <ClCompile Include="..\Source\strategies\terrain\TankPush.cpp" />
+    <ClCompile Include="..\Source\strategies\terrain\VultureRush.cpp" />
+    <ClCompile Include="..\Source\strategies\zerg\ThreeHatchMutalisk.cpp" />
+    <ClCompile Include="..\Source\strategies\zerg\ThreeHatchScourge.cpp" />
+    <ClCompile Include="..\Source\strategies\zerg\TwoHatchHydralisk.cpp" />
+    <ClCompile Include="..\Source\strategies\zerg\ZergelingRush.cpp" />
     <ClCompile Include="..\Source\UAlbertaBot_Arena.cpp" />
     <ClCompile Include="..\Source\UAlbertaBot_Tournament.cpp" />
     <ClCompile Include="..\Source\UnitInfoManager.cpp" />
@@ -114,6 +127,7 @@
     <ClInclude Include="..\Source\commands\CommandExecutor.h" />
     <ClInclude Include="..\Source\commands\CommandManager.h" />
     <ClInclude Include="..\Source\commands\ProductionCommandExecutor.h" />
+    <ClInclude Include="..\Source\commands\StrategyManagerCommandExecutor.h" />
     <ClInclude Include="..\Source\commands\UnitCommandExecutor.h" />
     <ClInclude Include="..\Source\commands\WorkerCommandExecutor.h" />
     <ClInclude Include="..\Source\Common.h" />
@@ -141,6 +155,19 @@
     <ClInclude Include="..\Source\PlayerLocationProvider.h" />
     <ClInclude Include="..\Source\Rect.h" />
     <ClInclude Include="..\Source\ScreenCanvas.h" />
+    <ClInclude Include="..\Source\strategies\protoss\DarkTemplarRush.h" />
+    <ClInclude Include="..\Source\strategies\protoss\DragoonRush.h" />
+    <ClInclude Include="..\Source\strategies\protoss\ZealotDrop.h" />
+    <ClInclude Include="..\Source\strategies\protoss\ZealotRush.h" />
+    <ClInclude Include="..\Source\strategies\StrategyExecutor.h" />
+    <ClInclude Include="..\Source\strategies\terrain\FourBarracksMarine.h" />
+    <ClInclude Include="..\Source\strategies\terrain\MarineRush.h" />
+    <ClInclude Include="..\Source\strategies\terrain\TankPush.h" />
+    <ClInclude Include="..\Source\strategies\terrain\VultureRush.h" />
+    <ClInclude Include="..\Source\strategies\zerg\ThreeHatchMutalisk.h" />
+    <ClInclude Include="..\Source\strategies\zerg\ThreeHatchScourge.h" />
+    <ClInclude Include="..\Source\strategies\zerg\TwoHatchHydralisk.h" />
+    <ClInclude Include="..\Source\strategies\zerg\ZergelingRush.h" />
     <ClInclude Include="..\Source\Strategy.h" />
     <ClInclude Include="..\Source\UAlbertaBot_Arena.h" />
     <ClInclude Include="..\Source\UAlbertaBot_Tournament.h" />
