--- a/UAlbertaBot/bin/AK_Config.json
+++ b/UAlbertaBot/bin/AK_Config.json
@@ -117,67 +117,440 @@
 			"Protoss_ZealotRush": 
 			{
 				"Race": "Protoss",
-				"OpeningBuildOrder": [ "Probe", "Probe", "Probe", "Probe", "Pylon", "Probe", "Gateway", "Gateway", "Probe", "Probe", "Zealot", "Pylon", "Zealot", "Zealot", "Probe", "Zealot", "Zealot", "Probe", "Pylon", "Zealot", "Gateway", "Probe", "Pylon", "Probe", "Zealot", "Probe", "Zealot", "Zealot", "Zealot", "Zealot", "Pylon", "Probe", "Zealot", "Zealot", "Zealot" ]
+        "OpeningBuildOrder": [
+          "Probe",
+          "Probe",
+          "Probe",
+          "Probe",
+          "Pylon",
+          "Probe",
+          "Gateway",
+          "Gateway",
+          "Probe",
+          "Probe",
+          "Zealot",
+          "Pylon",
+          "Zealot",
+          "Zealot",
+          "Probe",
+          "Zealot",
+          "Zealot",
+          "Probe",
+          "Pylon",
+          "Zealot",
+          "Gateway",
+          "Probe",
+          "Pylon",
+          "Probe",
+          "Zealot",
+          "Probe",
+          "Zealot",
+          "Zealot",
+          "Zealot",
+          "Zealot",
+          "Pylon",
+          "Probe",
+          "Zealot",
+          "Zealot",
+          "Zealot" 
+        ]
 			},
 			"Protoss_DragoonRush": 
 			{
 				"Race": "Protoss",
-				"OpeningBuildOrder": [ "Probe", "Probe", "Probe", "Probe", "Pylon", "Probe", "Probe", "Gateway", "Probe", "Assimilator", "Probe", "Probe", "Cybernetics_Core", "Probe", "Probe", "Gateway", "Singularity_Charge", "Dragoon", "Gateway", "Pylon", "Dragoon", "Dragoon", "Probe", "Gateway", "Pylon", "Probe", "Dragoon", "Dragoon", "Dragoon" ]
+        "OpeningBuildOrder": [
+          "Probe",
+          "Probe",
+          "Probe",
+          "Probe",
+          "Pylon",
+          "Probe",
+          "Probe",
+          "Gateway",
+          "Probe",
+          "Assimilator",
+          "Probe",
+          "Probe",
+          "Cybernetics_Core",
+          "Probe",
+          "Probe",
+          "Gateway",
+          "Singularity_Charge",
+          "Dragoon",
+          "Gateway",
+          "Pylon",
+          "Dragoon",
+          "Dragoon",
+          "Probe",
+          "Gateway",
+          "Pylon",
+          "Probe",
+          "Dragoon",
+          "Dragoon", 
+          "Dragoon" ]
 			},
 			"Protoss_DTRush": 
 			{
 				"Race": "Protoss",
-				"OpeningBuildOrder": [ "Probe", "Probe", "Probe", "Probe", "Pylon", "Probe", "Gateway", "Probe", "Assimilator", "Probe", "Cybernetics_Core", "Probe", "Citadel_of_Adun", "Probe", "Templar_Archives", "Gateway", "Dark_Templar", "Dark_Templar", "Pylon", "Dark_Templar", "Dark_Templar", "Probe", "Pylon", "Probe" ]
+        "OpeningBuildOrder": [
+          "Probe",
+          "Probe",
+          "Probe",
+          "Probe",
+          "Pylon",
+          "Probe",
+          "Gateway",
+          "Probe",
+          "Assimilator",
+          "Probe",
+          "Cybernetics_Core",
+          "Probe",
+          "Citadel_of_Adun",
+          "Probe",
+          "Templar_Archives",
+          "Gateway",
+          "Dark_Templar",
+          "Dark_Templar",
+          "Pylon",
+          "Dark_Templar",
+          "Dark_Templar",
+          "Probe",
+          "Pylon", 
+          "Probe" ]
 			},
 			"Protoss_Drop": 
 			{
 				"Race": "Protoss",
-				"OpeningBuildOrder": [ "Probe", "Probe", "Probe", "Probe", "Pylon", "Probe", "Probe", "Gateway", "Probe", "Assimilator", "Probe", "Probe", "Cybernetics_Core", "Probe", "Gateway", "Robotics Facility" ]
+        "OpeningBuildOrder": [
+          "Probe",
+          "Probe",
+          "Probe",
+          "Probe",
+          "Pylon",
+          "Probe",
+          "Probe",
+          "Gateway",
+          "Probe",
+          "Assimilator",
+          "Probe",
+          "Probe",
+          "Cybernetics_Core",
+          "Probe",
+          "Gateway", 
+          "Robotics Facility" ]
 			},
 			"Terran_MarineRush": 
 			{
 				"Race": "Terran",
-				"OpeningBuildOrder": [ "SCV", "SCV", "SCV", "SCV", "Barracks", "Barracks", "SCV", "Supply Depot", "SCV", "Marine", "Marine", "Marine", "Marine", "Supply Depot" ]
+        "OpeningBuildOrder": [
+          "SCV",
+          "SCV",
+          "SCV",
+          "SCV",
+          "Barracks",
+          "Barracks",
+          "SCV",
+          "Supply Depot",
+          "SCV",
+          "Marine",
+          "Marine",
+          "Marine",
+          "Marine", 
+          "Supply Depot" ]
 			},
 			"Terran_TankPush": 
 			{
 				"Race": "Terran",
-				"OpeningBuildOrder": [ "SCV", "SCV", "SCV", "SCV", "SCV", "Supply Depot", "SCV", "Barracks", "Refinery", "SCV", "SCV", "SCV", "SCV", "Factory", "Factory", "SCV", "SCV", "SCV", "SCV", "Machine Shop", "Machine Shop", "Supply Depot", "Tank Siege Mode", "Siege Tank Tank Mode", "Siege Tank Tank Mode", "Siege Tank Tank Mode", "Siege Tank Tank Mode" ]
+        "OpeningBuildOrder": [
+          "SCV",
+          "SCV",
+          "SCV",
+          "SCV",
+          "SCV",
+          "Supply Depot",
+          "SCV",
+          "Barracks",
+          "Refinery",
+          "SCV",
+          "SCV",
+          "SCV",
+          "SCV",
+          "Factory",
+          "Factory",
+          "SCV",
+          "SCV",
+          "SCV",
+          "SCV",
+          "Machine Shop",
+          "Machine Shop",
+          "Supply Depot",
+          "Tank Siege Mode",
+          "Siege Tank Tank Mode",
+          "Siege Tank Tank Mode",
+          "Siege Tank Tank Mode", 
+          "Siege Tank Tank Mode" ]
 			},
 			"Terran_4RaxMarines": 
 			{
 				"Race": "Terran",
-				"OpeningBuildOrder": [ "Barracks", "SCV", "SCV", "Marine", "SCV", "Marine", "Supply Depot", "SCV", "Marine", "Marine", "Marine", "Marine", "Marine", "Marine" ]
+        "OpeningBuildOrder": [
+          "Barracks",
+          "SCV",
+          "SCV",
+          "Marine",
+          "SCV",
+          "Marine",
+          "Supply Depot",
+          "SCV",
+          "Marine",
+          "Marine",
+          "Marine",
+          "Marine",
+          "Marine", 
+          "Marine" ]
 			},
 			"Terran_VultureRush": 
 			{
 				"Race": "Terran",
-				"OpeningBuildOrder": [ "SCV", "SCV", "SCV", "SCV", "SCV", "Supply Depot", "SCV", "SCV", "Barracks", "Refinery", "SCV", "SCV", "SCV", "SCV", "Supply Depot", "Factory", "SCV", "SCV", "SCV", "Vulture", "Vulture" ]
+        "OpeningBuildOrder": [
+          "SCV",
+          "SCV",
+          "SCV",
+          "SCV",
+          "SCV",
+          "Supply Depot",
+          "SCV",
+          "SCV",
+          "Barracks",
+          "Refinery",
+          "SCV",
+          "SCV",
+          "SCV",
+          "SCV",
+          "Supply Depot",
+          "Factory",
+          "SCV",
+          "SCV",
+          "SCV",
+          "Vulture", 
+          "Vulture" ]
 			},
 			"Zerg_ZerglingRush": 
 			{
 				"Race": "Zerg",
-				"OpeningBuildOrder": [ "Drone", "Spawning Pool", "Zergling", "Zergling", "Zergling", "Zergling" ]
+        "OpeningBuildOrder": [
+          "Drone",
+          "Spawning Pool",
+          "Zergling",
+          "Zergling",
+          "Zergling", 
+          "Zergling" ]
 			},
 			"Zerg_9Pool": 
 			{
 				"Race": "Zerg",
-				"OpeningBuildOrder": [ "Drone", "Drone", "Drone", "Drone", "Drone", "Spawning Pool", "Drone", "Extractor", "Overlord", "Drone", "Zergling", "Zergling", "Zergling", "Hydralisk Den", "Drone", "Drone", "Drone", "Drone" ]
+        "OpeningBuildOrder": [
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Spawning Pool",
+          "Drone",
+          "Extractor",
+          "Overlord",
+          "Drone",
+          "Zergling",
+          "Zergling",
+          "Zergling",
+          "Hydralisk Den",
+          "Drone",
+          "Drone",
+          "Drone", 
+          "Drone" ]
 			},
 			"Zerg_2HatchHydra": 
 			{
 				"Race": "Zerg",
-				"OpeningBuildOrder": [ "Drone", "Drone", "Drone", "Drone", "Drone", "Overlord", "Drone", "Drone", "Drone", "Hatchery", "Spawning Pool", "Drone", "Extractor", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Hydralisk Den", "Drone", "Overlord", "Drone", "Drone", "Drone", "Grooved_Spines", "Hydralisk", "Hydralisk", "Hydralisk", "Hydralisk", "Hydralisk", "Hydralisk", "Hydralisk", "Hydralisk", "Hydralisk", "Hydralisk", "Hydralisk", "Hydralisk", "Hatchery", "Extractor" ]
+        "OpeningBuildOrder": [
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Overlord",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Hatchery",
+          "Spawning Pool",
+          "Drone",
+          "Extractor",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Hydralisk Den",
+          "Drone",
+          "Overlord",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Grooved_Spines",
+          "Hydralisk",
+          "Hydralisk",
+          "Hydralisk",
+          "Hydralisk",
+          "Hydralisk",
+          "Hydralisk",
+          "Hydralisk",
+          "Hydralisk",
+          "Hydralisk",
+          "Hydralisk",
+          "Hydralisk",
+          "Hydralisk",
+          "Hatchery", 
+          "Extractor" ]
 			},
 			"Zerg_3HatchMuta": 
 			{
 				"Race": "Zerg",
-				"OpeningBuildOrder": [ "Drone", "Drone", "Drone", "Drone", "Overlord", "Drone", "Drone", "Drone", "Drone", "Hatchery", "Drone", "Drone", "Spawning_Pool", "Drone", "Drone", "Extractor", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Lair", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Spire", "Overlord", "Drone", "Overlord", "Hatchery", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Mutalisk", "Mutalisk", "Mutalisk", "Mutalisk", "Mutalisk", "Mutalisk", "Mutalisk", "Mutalisk", "Mutalisk", "Mutalisk", "Mutalisk", "Mutalisk", "Hatchery" ]
+        "OpeningBuildOrder": [
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Overlord",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Hatchery",
+          "Drone",
+          "Drone",
+          "Spawning_Pool",
+          "Drone",
+          "Drone",
+          "Extractor",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Lair",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Spire",
+          "Overlord",
+          "Drone",
+          "Overlord",
+          "Hatchery",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Mutalisk",
+          "Mutalisk",
+          "Mutalisk",
+          "Mutalisk",
+          "Mutalisk",
+          "Mutalisk",
+          "Mutalisk",
+          "Mutalisk",
+          "Mutalisk",
+          "Mutalisk",
+          "Mutalisk",
+          "Mutalisk", 
+          "Hatchery" ]
 			},
 			"Zerg_3HatchScourge": 
 			{
 				"Race": "Zerg",
-				"OpeningBuildOrder": [ "Drone", "Drone", "Drone", "Drone", "Overlord", "Drone", "Drone", "Drone", "Drone", "Hatchery", "Drone", "Drone", "Spawning_Pool", "Drone", "Drone", "Extractor", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Lair", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Spire", "Overlord", "Drone", "Overlord", "Hatchery", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Drone", "Hatchery", "Drone", "Extractor", "Drone", "Hatchery", "Scourge", "Scourge", "Scourge", "Scourge", "Scourge", "Scourge", "Scourge", "Scourge", "Scourge", "Scourge", "Scourge", "Scourge", "Hatchery", "Extractor", "Extractor", "Hatchery" ]
+        "OpeningBuildOrder": [
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Overlord",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Hatchery",
+          "Drone",
+          "Drone",
+          "Spawning_Pool",
+          "Drone",
+          "Drone",
+          "Extractor",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Lair",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Spire",
+          "Overlord",
+          "Drone",
+          "Overlord",
+          "Hatchery",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Drone",
+          "Hatchery",
+          "Drone",
+          "Extractor",
+          "Drone",
+          "Hatchery",
+          "Scourge",
+          "Scourge",
+          "Scourge",
+          "Scourge",
+          "Scourge",
+          "Scourge",
+          "Scourge",
+          "Scourge",
+          "Scourge",
+          "Scourge",
+          "Scourge",
+          "Scourge",
+          "Hatchery",
+          "Extractor",
+          "Extractor", 
+          "Hatchery" ]
 			}
         }
     }
