Add configuration of the micro manager for bot - Add ability play with threshold for combat simulations - Add ability to change squad order update parameters - Start splitting of attack squad on multiple squads. Added PoC

--- a/UAlbertaBot/VisualStudio/AKBot.vcxproj.filters
+++ b/UAlbertaBot/VisualStudio/AKBot.vcxproj.filters
@@ -235,6 +235,9 @@
     <ClCompile Include="..\Source\strategies\BaseStrategyExecutor.cpp">
       <Filter>strategies</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\commands\MicroCommandExecutor.cpp">
+      <Filter>commands</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="common">
@@ -555,6 +558,9 @@
     </ClInclude>
     <ClInclude Include="..\Source\strategies\BaseStrategyExecutor.h">
       <Filter>strategies</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\commands\MicroCommandExecutor.h">
+      <Filter>commands</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
