--- a/UAlbertaBot/VisualStudio/AKBot.vcxproj
+++ b/UAlbertaBot/VisualStudio/AKBot.vcxproj
@@ -42,6 +42,7 @@
     <ClCompile Include="..\Source\commands\BaseLocationCommandExecutor.cpp" />
     <ClCompile Include="..\Source\commands\BWAPICommandExecutor.cpp" />
     <ClCompile Include="..\Source\commands\CommandManager.cpp" />
+    <ClCompile Include="..\Source\commands\MicroCommandExecutor.cpp" />
     <ClCompile Include="..\Source\commands\ProductionCommandExecutor.cpp" />
     <ClCompile Include="..\Source\commands\StrategyManagerCommandExecutor.cpp" />
     <ClCompile Include="..\Source\commands\UnitCommandExecutor.cpp" />
@@ -127,6 +128,7 @@
     <ClInclude Include="..\Source\commands\BWAPICommandExecutor.h" />
     <ClInclude Include="..\Source\commands\CommandExecutor.h" />
     <ClInclude Include="..\Source\commands\CommandManager.h" />
+    <ClInclude Include="..\Source\commands\MicroCommandExecutor.h" />
     <ClInclude Include="..\Source\commands\ProductionCommandExecutor.h" />
     <ClInclude Include="..\Source\commands\StrategyManagerCommandExecutor.h" />
     <ClInclude Include="..\Source\commands\UnitCommandExecutor.h" />
