--- a/UAlbertaBot/VisualStudio/AKBot.vcxproj
+++ b/UAlbertaBot/VisualStudio/AKBot.vcxproj
@@ -62,6 +62,7 @@
     <ClCompile Include="..\Source\DefaultPlayerLocationProvider.cpp" />
     <ClCompile Include="..\source\DetectorManager.cpp" />
     <ClCompile Include="..\Source\DistanceMap.cpp" />
+    <ClCompile Include="..\Source\ExplorerManager.cpp" />
     <ClCompile Include="..\Source\GameCommander.cpp" />
     <ClCompile Include="..\Source\ScreenCanvas.cpp" />
     <ClCompile Include="..\Source\strategies\BaseStrategyExecutor.cpp" />
@@ -150,6 +151,7 @@
     <ClInclude Include="..\source\DetectorManager.h" />
     <ClInclude Include="..\Source\Distance.h" />
     <ClInclude Include="..\Source\DistanceMap.h" />
+    <ClInclude Include="..\Source\ExplorerManager.h" />
     <ClInclude Include="..\Source\GameCommander.h" />
     <ClInclude Include="..\Source\GameHistory.hpp" />
     <ClInclude Include="..\Source\Logger.h" />
