--- a/UAlbertaBot/VisualStudio/AKBot.vcxproj.filters
+++ b/UAlbertaBot/VisualStudio/AKBot.vcxproj.filters
@@ -238,6 +238,9 @@
     <ClCompile Include="..\Source\commands\MicroCommandExecutor.cpp">
       <Filter>commands</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\ExplorerManager.cpp">
+      <Filter>macro</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="common">
@@ -561,6 +564,9 @@
     </ClInclude>
     <ClInclude Include="..\Source\commands\MicroCommandExecutor.h">
       <Filter>commands</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\ExplorerManager.h">
+      <Filter>macro</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
