Update CMake files to work with latest code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,12 @@
 project (AKBot)
 cmake_minimum_required (VERSION 2.6)
 option(AKBOT_SSCAIT "Generate SSCAIT supported version")
+cmake_policy(SET CMP0028 OLD)
 
 set(BWAPI_SSCAIT_DIR "$ENV{BWAPI_SSCAIT_DIR}")
+set(BWAPI_DIR "$ENV{BWAPI_DIR}")
 STRING(REPLACE "\\" "/" BWAPI_SSCAIT_DIR ${BWAPI_SSCAIT_DIR})
+STRING(REPLACE "\\" "/" BWAPI_DIR ${BWAPI_DIR})
 
 add_subdirectory (BOSS)
 add_subdirectory (SparCraft) 
