Add tests project using CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ STRING(REPLACE "\\" "/" BWAPI_DIR ${BWAPI_DIR})
 add_subdirectory (BOSS)
 add_subdirectory (SparCraft) 
 add_subdirectory (UAlbertaBot) 
+add_subdirectory (AKBot.Tests) 
